<resources>
    <string name="app_name">Practice</string>
    <string name="app_name_custom">Practice App</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="open_second_activity">Open Second Activity</string>
    <string name="open_context_menu">Open context menu\n(Long click)</string>
    <string name="open_popup_menu">Open popup menu</string>
    <string name="open_submenu_activity">Open Submenu activity</string>
    <string name="settings">Settings</string>
    <string name="read">Read</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="news">News</string>
    <string name="other">Other</string>
    <string name="open_group_menu_activity">Open group menu activity</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="open_navigation_drawer_activity">Open navigation drawer activity</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="more_2">More</string>
    <string name="setting">Настройки</string>
    <string name="camera">Камера</string>
    <string name="help">Помощь</string>
    <string name="header">Это наш хедер</string>
    <string name="nav_opened">Open Nav Drawer</string>
    <string name="nav_closed">Close Nav Drawer</string>
</resources>